# casys-rpg

./: .replit  Pasted--Debugger-is-active-Debugger-PIN-680-834-797-172-31-196-48-17-Nov-2024-04-07-32-GET--1731816536600.txt  Pasted-8-19-19-AM-vite-http-proxy-error-books-Error-connect-ECONNREFUSED-0-0-0-0-5000-at-TCPConn-1732609322164.txt  Pasted-from-reportlab-pdfgen-import-canvas-from-reportlab-lib-pagesizes-import-letter-from-reportlab-lib--1732014944055.txt  Pasted-import-os-import-json-import-logging-from-typing-import-List-Dict-Any-from-domain-ports-impo-1732436168288.txt  Pasted-import-os-import-re-from-PyPDF2-import-PdfReader-from-openai-import-OpenAI-Import-selon-votre--1731774207762.txt  app.py  auth_routes.py  config.py  create_test_pdf.py  main.py  main_processor.py  migrate_content.py  migrate_to_storage.py  package-lock.json  package.json  pdf_processor.py  pyproject.toml  readme.md  replit.nix  requirements.txt  run_migration.py  test_pdf_processor.py
.github/: FUNDING.yml
content/: chapter1.md  chapter2.md  chapter3.md  chapter_000.md  chapter_001.md  chapter_002.md  chapter_003.md
frontend/: App.js  app.json  babel.config.js  index.html  index.js  metro.config.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vite.preview.config.js  webpack.config.js
metadata/: Defis_Fantastiques_18_-_La_Planete_Rebelle.pdf.json  Defis_Fantastiques_61_-_Les_Pirates_du_crane_noir.pdf.json  test_book.pdf.json
templates/: index.html
vue-frontend/: .env.development  index.html  package-lock.json  (+2 more)
(+2101 files in other folders)
